@@ -92,7 +92,10 @@ Page* InspectorClient::createPage()
     g_signal_connect(m_webView, "destroy",
                      G_CALLBACK(notifyWebViewDestroyed), (gpointer)this);
 
-    webkit_web_view_open(m_webView, "file://"DATA_DIR"/webkit-1.0/webinspector/inspector.html");
+    gchar* inspectorURI = g_filename_to_uri(DATA_DIR"/webkit-1.0/webinspector/inspector.html", NULL, NULL);
+    webkit_web_view_load_uri(m_webView, inspectorURI);
+    g_free(inspectorURI);
+
     gtk_widget_show(GTK_WIDGET(m_webView));
 
     return core(m_webView);
@@ -100,8 +103,8 @@ Page* InspectorClient::createPage()
 
 String InspectorClient::localizedStringsURL()
 {
-    notImplemented();
-    return String();
+    // FIXME: support l10n of localizedStrings.js
+    return String::fromUTF8(g_filename_to_uri(DATA_DIR"/webkit-1.0/webinspector/localizedStrings.js", NULL, NULL));
 }
 
 String InspectorClient::hiddenPanels()
